Rename app branding to Match Pilot

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Finder</title>
+    <title>Match Pilot</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/components.css" />
@@ -21,7 +21,7 @@
     <header class="site-header">
       <div class="site-header-row">
         <div>
-          <p class="eyebrow">Job Finder</p>
+          <p class="eyebrow">Match Pilot</p>
           <h1>Find, Rank, and Track Jobs</h1>
           <p>Upload your resume, discover high-fit roles, and run your applications like an operating pipeline.</p>
         </div>
