--- a/frontend/login.html
+++ b/frontend/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Finder | Login</title>
+    <title>Match Pilot | Login</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="/css/main.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.5/dist/axios.min.js"></script>
@@ -11,7 +11,7 @@
   <body>
     <main class="auth-shell">
       <section class="auth-panel">
-        <p class="eyebrow">Job Finder</p>
+        <p class="eyebrow">Match Pilot</p>
         <h1>Sign in</h1>
         <p class="panel-subtitle">Each account keeps resumes, jobs, and applications private.</p>
 
