--- a/frontend/stored-jobs.html
+++ b/frontend/stored-jobs.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Job Finder | Stored Jobs</title>
+    <title>Match Pilot | Stored Jobs</title>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="/css/components.css" />
@@ -19,7 +19,7 @@
     <header class="site-header compact">
       <div class="site-header-row">
         <div>
-          <p class="eyebrow">Job Finder</p>
+          <p class="eyebrow">Match Pilot</p>
           <h1>Stored Job Database</h1>
           <p>Browse every job saved by the scraper with source and search filters.</p>
         </div>
