--- a/frontend/stored-jobs.html
+++ b/frontend/stored-jobs.html
@@ -52,7 +52,9 @@
               <option value="200">200</option>
             </select>
           </div>
-          <button type="submit">Load Jobs</button>
+          <div class="form-actions">
+            <button type="submit">Load Jobs</button>
+          </div>
         </form>
         <div class="results-toolbar">
           <div id="stored-meta" class="meta"></div>
